--- a/_includes/post_begin.html
+++ b/_includes/post_begin.html
@@ -1,8 +1,11 @@
-<div class="post">
+<div class="post text-left well well-small">
 
-			<h1 class="storydate">{{ page.date | date: "%d.%m.%Y"  }}</h1>
+  <h2>
+    <small class="muted help-block">{{ page.date | date: "%d.%m.%Y"  }}</small>
+    <a href="{{ page.url }}" rel="bookmark" title="Permanent link to {{page.title}}">{{page.title}}</a>
+  </h3>
 
-<h2 class="storytitle"><a href="{{ page.url }}" rel="bookmark" title="Permanent link to {{page.title}}">{{page.title}}</a></h2>
+  <hr />
 
-<p class="meta">Postado às {{ page.date | date: "%H:%M" }} por {{ page.author }}</a></p>
+  <p class="text-info">Postado às {{ page.date | date: "%H:%M" }} por {{ page.author }}</p>
 
