--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
     {% if site.feedburner %}
     <link href="http://feeds.feedburner.com/{{ site.feedburner.id }}" rel="alternate" title="{{ site.title }}" type="application/atom+xml" />
     {% endif %}
-	<link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="/stylesheets/bootstrap.css" type="text/css" media="screen" />
     {% if site.google_analytics %}
     <!-- google analytics async -->
     <script type="text/javascript">
@@ -25,56 +26,63 @@
     {% endif %}
   </head>
   <body>
-	
-	<div id="wrapper">
 
-		<div id="header">
-			<h1><a href="http://www.dojosp.org">Coding Dojo@SP</a></h1>
-			<p></p>
-		</div>
+	<div class="container">
 
-		<div id="content">
-		  {{ content}}
-		</div>
+    <header class="jumbotron subhead">
+      <div class="container">
+        <h1><a href="http://www.dojosp.org">Coding Dojo@SP</a></h1>
+      </div>
+    </header>
 
-		<div id="sidebar">
-		<ul>
-			<li class="widget widget_rss">
-				<div>
-					<h2>
-					<a class='rsswidget' href='http://feeds.feedburner.com/DojoSP' title='Syndicate this content'>
-						<img style='border:0' width='14' height='14' src='/images/rss.png' alt='RSS' /></a> 
-						<a class='rsswidget' href='http://www.dojosp.org' title=''>Dojo SP</a>
-					</h2>
-					<ul>
-					{% for post in site.posts limit:10 %}
-						<li><a class='rsswidget' href='{{ post.url }}' title='{{ post.title}}'>{{post.title}}</a></li>
-				    {% endfor %}
-					</ul>
-				</div>
-			</li>
-			<li id="linkcat-12" class="widget widget_links">
-				<div>
-					<h2>Blog dos Participantes</h2>
-					<ul class='xoxo blogroll'>
-						<li><a href="http://www.dtsato.com/blog/" title="Blog do Danilo Sato">Blog do Danilo Sato</a></li>
-						<li><a href="http://blog.rodrigoflores.org" title="Blog do Flores">Blog do Flores</a></li>
-						<li><a href="http://fmeyer.org/" title="Blog do Meyer">Blog do Meyer</a></li>
-						<li><a href="http://codeache.blogspot.com/" title="Blog do Hugo">CodeAche</a></li>
-						<li><a href="http://vidageek.net/" title="Vidageek">Vidageek</a></li>
-						<li><a href="http://universidadelivre.aleborba.com.br" title="Universidade Livre">Universidade Livre</a></li>
-					</ul>
-				</div>
-			</li>
-		</ul>
-		</div>
+		<div class="row-fluid">
 
-		<div id="footer">
-			<p>Based on design by <a href="http://beccary.com" title="Based on Ocadia theme designed by Beccary">Beccary</a> and <a href="http://weblogs.us" title="Based on Ocadia theme sponsored by Weblogs.us">Weblogs.us</a>
-			</p>
-		</div>
+      <div class="span8">
+
+        {{ content}}
+
+        <hr />
+
+      </div>
+
+      <div class="span4 text-left">
+        <ul class="nav nav-list well well-small">
+          <li class="widget widget_rss">
+            <div>
+              <h3>
+                <a class='rsswidget' href='http://feeds.feedburner.com/DojoSP' title='Syndicate this content'>
+                  <img style='border:0' width='14' height='14' src='/images/rss.png' alt='RSS' /></a>
+                <a class='rsswidget' href='http://www.dojosp.org' title=''>Dojo SP</a>
+              </h3>
+              <ul>
+                {% for post in site.posts limit:10 %}
+                <li><a class='rsswidget' href='{{ post.url }}' title='{{ post.title}}'>{{post.title}}</a></li>
+                {% endfor %}
+              </ul>
+            </div>
+          </li>
+          <li id="linkcat-12" class="widget widget_links">
+            <div>
+              <h3>Blog dos Participantes</h3>
+              <ul class='xoxo blogroll'>
+                <li><a href="http://www.dtsato.com/blog/" title="Blog do Danilo Sato">Blog do Danilo Sato</a></li>
+                <li><a href="http://blog.rodrigoflores.org" title="Blog do Flores">Blog do Flores</a></li>
+                <li><a href="http://fmeyer.org/" title="Blog do Meyer">Blog do Meyer</a></li>
+                <li><a href="http://codeache.blogspot.com/" title="Blog do Hugo">CodeAche</a></li>
+                <li><a href="http://vidageek.net/" title="Vidageek">Vidageek</a></li>
+                <li><a href="http://universidadelivre.aleborba.com.br" title="Universidade Livre">Universidade Livre</a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+
 	</div>
-	
+
+  <footer>
+
+  </footer>
+
   {% if site.github %}
     <a href="http://github.com/{{ site.github.username }}"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
   {% endif %}
